Resolved sizing issues for text-wrapped media/widgets on mobile/small screens

--- a/system/application/views/melons/cantaloupe/css/common.css
+++ b/system/application/views/melons/cantaloupe/css/common.css
@@ -614,9 +614,23 @@ a:hover { text-decoration: underline; }
 	background-repeat: no-repeat;
 }
 
+.wrapped_slot.full_width, .mediainfo.full_width{
+	margin: 0 -2rem;
+}
+
 .wrapped_slot>.mediaelement, .wrapped_slot>.widgetContainer{
 	margin: 1rem;
 }
+
+
+.wrapped_slot>.mediaelement, .wrapped_slot>.widgetContainer{
+	margin: 1rem;
+}
+.wrapped_slot.full_width>.mediaelement, .wrapped_slot.full_widget>.widgetContainer{
+	margin: 0;
+	margin-top: 1rem;
+}
+
 
 .mediaelement {
 	margin-bottom: 2.4rem;
